force-app/main/default/src/objects/Loop__Text_Group_Text_Snippet__c/Loop__Text_Group_Text_Snippet__c.object-meta.xml
<CustomObject>
    <label>Component Group Component</label>
    <nameField>
        <displayFormat>CGC-{000000}</displayFormat>
        <label>Component Group Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Group Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>