force-app/main/default/src/objects/Loop__Text_Group_Text_Snippet__c/fields/Loop__Advanced_Filter_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Loop__Advanced_Filter_Conditions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advanced Filter Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>