force-app/main/default/src/objects/Loop__Text_Group_Text_Snippet__c/fields/Loop__Text_Group__c.field-meta.xml
<CustomField>
    <fullName>Loop__Text_Group__c</fullName>
    <label>Component Group</label>
    <referenceTo>Loop__Text_Group__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Text_Group_Text_Snippets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>