force-app/main/default/src/objects/Loop__Text_Group_Text_Snippet__c/fields/Loop__Text_Snippet__c.field-meta.xml
<CustomField>
    <fullName>Loop__Text_Snippet__c</fullName>
    <label>Component</label>
    <referenceTo>Loop__Text_Snippet__c</referenceTo>
    <relationshipLabel>Component Groups</relationshipLabel>
    <relationshipName>Text_Group_Text_Snippets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>